Fix source overlap

--- a/scss/torchdyn/_torchdyn.scss
+++ b/scss/torchdyn/_torchdyn.scss
@@ -101,3 +101,19 @@ article.pytorch-article {
 .pytorch-right-menu li.toctree-l1.current > a:before {
   background-color: var(--primary-lightest);
 }
+
+/* more marging for copyright at the bottom */
+.sphinx-credits {
+  margin: 1rem 0;
+}
+
+/* fix overflap in class signature */
+article.pytorch-article .class dt {
+  padding-left: 5em;
+}
+
+article.pytorch-article .class dt em.property {
+  position: absolute;
+  left: 0.2rem;
+  top: 0.3rem;
+}
